--- a/Source/Journals.Web/Views/Publisher/Index.cshtml
+++ b/Source/Journals.Web/Views/Publisher/Index.cshtml
@@ -17,8 +17,12 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
+            
     </style>
 }
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
 <h2>Publisher - List of Journals</h2>
 
@@ -28,39 +32,41 @@
 
 @if (Model.Count == 0)
 {
-    <div>  Click @Html.ActionLink("here", "Create") to publish your first Journal.</div>
+    <div> Click @Html.ActionLink("here", "Create") to publish your first Journal.</div>
 }
 else
 {
-
     <table class="table table-condensed table-striped">
         <thead>
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>File</th>
-                <th>Action</th>
-            </tr>
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>File</th>
+            <th>Action</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.ActionLink(item.FileName, "GetFile", new { Id = item.Id }, new { target = "_blank" })
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                    </td>
-                </tr>
-            }
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.ActionLink(item.FileName, "GetFile", new {Id = item.Id}, new {target = "_blank"})
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new {@class = "btn btn-primary"}) |
+                    @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new {@class = "btn btn-danger"}) |
+                    @Html.ActionLink("Issues", "Index", new {Controller = "Issues", action = "Index", journalId = item.Id}, new {@class = "btn btn-success"})
+                </td>
+            </tr>
+        }
         </tbody>
     </table>
 }
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
